--- a/mole/index.html
+++ b/mole/index.html
@@ -18,13 +18,12 @@
   }
   .background {
     opacity: .2;
+    position: relative;
   }
   .grassUpper {
-    position: relative;
     z-index: -10;
   }
   .grassLower {
-    position: relative;
     z-index: 10;
   }
   .moleContainer {
@@ -33,7 +32,10 @@
     position: absolute;
     top: 100px;
     z-index: 0;
-    transition: all 1s;
+  }
+  img.mole {
+    position: relative;
+    left: 0px;
   }
   #moleC1 {
     left: 112px;
@@ -44,63 +46,46 @@
   #moleC3 {
     left: 731px;
   }
- /* #moleC1.exposed, #moleC2.exposed, #moleC3.exposed {
-    top: 0px;
-  }
-  #moleC1.hidden, #moleC2.hidden, #moleC3.hidden {
-    top: 100px;
-  }*/
-
-/*animate keyframes for the getting hit and laughing part*/
-  @-webkit-keyframes exposed {
-    0% {top: 100px;}
-    100% {top: 0;}
-  }
-  @-webkit-keyframes hidden {
-    0% {top: 0;}
-    100% {top: 100px;}
-  }
+@-webkit-keyframes {
+  0% {top: -150px;}
+  50% {top: 0;}
+}
   @-webkit-keyframes laugh {
     0% {left: -178px;}
     100% {left: -712px;}
+  }
+  .moleContainer.laugh img {
+    -webkit-animation: laugh 150ms steps(3) 4 alternate;
   }
   @-webkit-keyframes hit {
     0% {left: -712px;}
     100% {left: -1424px;}
   }
-  #moleC1.exposed, #moleC2.exposed, #moleC3.exposed {
-    -webkit-animation: exposed 300ms 0ms ease 1;
-  }
-  .moleContainer.hidden {
-    -webkit-animation: hidden 300ms 0ms ease 1;
-  }
-  .moleContainer.laugh img {
-    -webkit-animation: laugh 150ms 0ms steps(3) 4 alternate;
-  }
   .moleContainer.hit img {
-    -webkit-animation: hit 300ms 0ms steps(4) 2 alternate
+    -webkit-animation: hit 150ms 0ms steps(4) 2 alternate
+  }
+  .moleContainer.hit {
+    -webkit-animation: rise 50ms 0ms forwards, fall 100ms 50ms forwards;
+  }
+  @-webkit-keyframes rise {
+    0% {top: 100px;}
+    100% {top: 0;}
+  }
+  .moleContainer.rise {
+    -webkit-animation: rise 1000ms 0ms forwards;
+  }
+  @-webkit-keyframes fallAndLaugh {
+    0% {top: 0;}
+    50% {left: -178px;}
+    100% {
+      top: 100px;
+      left: -712px;
+    }
+  }
+  .moleContainer.fall {
+    -webkit-animation: fallAndLaugh 1000ms 0ms forwards;
   }
 
-/*
-Make a working animation for exposed
-Make a working animation for laughing
-Make a working animation for getting hit
-Make a working animation for hidden
-
-Pop up:
-Begin playing animation to raise mole
-Listen for a click on the img
-If a click is found,
-  stop the current animation,
-  freeze the position,
-  play the hit animation,
-  on end of hit animation, play hidden animation
-If no click is found,
-  on animationend for pop up or on level configurable settimeout
-  then play hidden and laugh animations
-
-
-*/
 </style>
 
 <div class="board">
@@ -112,7 +97,7 @@ If no click is found,
   <div id="moleC1" class="moleContainer">
     <img id="mole1" class="mole" src="data/img/sprites/mole.png" alt="mole"/>
   </div>
-  <div id="moleC2" class="moleContainer exposed">
+  <div id="moleC2" class="moleContainer">
     <img id="mole2" class="mole" src="data/img/sprites/mole.png" alt="mole"/>
   </div>
   <div id="moleC3" class="moleContainer">
@@ -125,7 +110,123 @@ If no click is found,
   </div>
 </div>
 
-<<script>
+<script>
+  /*What does my script need to do?
+  Randomly pop up moles
+    only if they are at rest and ready to pop up
+  When a mole pops up
+    Check to see if it gets clicked
+      If Yes, then
+        play hit animation and
+        send mole down
+        increase score
+      If No, then
+        play laugh and
+        send mole down
+  Set Timings
+    How fast does a mole rise?
+    How long does a mole stay at top?
+    How fast does a mole fall?
+    When should laugh animation start?
+    How long should timings be for hit animation?
+
+
+
+  */
+  var timings = {
+    moleRise: 2000,
+    moleTop: 1000,
+    moleFall: 2000,
+    animLaughDur: 500,
+    animLaughStart: this.moleFall - this.animLaughDur,
+    animHitDur: 200,
+    moleFrequency: 500
+  };
+  var allMoles = document.querySelectorAll('.moleContainer');
+
+  function moleRise(moleEl) {
+    moleEl.style.webkitAnimation = 'rise ' + timings.moleRise + 'ms 0ms forwards';
+    moleEl.classList.add('rise');
+    startDetectingHits(moleEl);
+    window.setTimeout(function() {
+      if (moleEl.className.indexOf('hit') !== -1) return;
+      moleEl.classList.remove('rise');
+      moleFall(moleEl);
+    }, timings.moleRise);
+
+  }
+  function moleFall(moleEl) {
+    moleEl.style.webkitAnimation = 'fall ' + timings.moleFall + 'ms 0ms forwards';
+    moleEl.classList.add('fall');
+
+    window.setTimeout(function() {
+      if (moleEl.className.indexOf('hit') !== -1) return;
+      moleLaugh(moleEl);
+    }, timings.animLaughStart);
+    window.setTimeout(function() {
+      moleEl.classList.remove('fall');
+    }, timings.moleFall);
+
+  }
+  function moleHit(moleEl) {
+    moleEl.style.webkitAnimation = 'rise 50ms 0ms forwards, fall 100ms 50ms forwards';
+    moleEl.firstElementChild.style.webkitAnimation = 'hit 150ms 0ms steps(4) 2 alternate';
+    moleEl.classList.add('hit');
+  }
+  function moleLaugh(moleEl) {
+    moleEl.classList.add('laugh');
+    window.setTimeout(function() {
+      moleEl.classList.remove('laugh');
+    }, timings.animLaughDur);
+  }
+  function clearMoleClasses(moleEl) {
+    moleEl.className = "moleContainer";
+  }
+
+  function animateRandomMole() {
+    var availableMoles = [];
+
+    allMoles.forEach(function(mole) {
+      if (mole.className !== "moleContainer") return;
+      availableMoles.push(mole);
+    });
+
+    var randomMole = availableMoles[Math.floor(Math.random() * availableMoles.length)];
+    moleRise(randomMole);
+  }
+
+ var startDetectingHits = function(moleEl) {
+   var counter = 0;
+   function handleHit(e) {
+      var moleContEl = e.target.parentElement;
+      if (moleContEl.classList.toString().indexOf('hit') !== -1) return; //exit if the mole was just hit
+     console.log('score', ++counter);
+     moleContEl.classList.add('hit');
+     moleContEl.classList.remove('rise');
+
+      window.setTimeout(function() {
+        moleContEl.classList.remove('hit');
+        moleContEl.removeEventListener('click', startDetectingHits);
+      }, timings.animHitDur);
+    }
+    moleEl.addEventListener('click', handleHit, false);
+  };
+
+  var popUpAMole = function() {
+    //take the moles that are not currently being animated
+  };
+
+//  function init(speed) {
+//    var moles = [moleC1, moleC2, moleC3];
+//    moles.forEach(function(mole) {
+//      startDetectingHits(mole);
+//    });
+//
+//  }
+//  init();
+
+
+
   var peek = function(moleEl) {
     moleEl.classList.add('exposed');
     window.setTimeout(function() {
@@ -141,64 +242,8 @@ If no click is found,
       moleEl.classList.remove('hidden');
     }, 500);
   };
-  var laugh = function(moleEl) {
-    moleEl.classList.add('laugh');
-    window.setTimeout(function() {
-      moleEl.classList.remove('laugh');
-    }, 500);
-  };
 
- var startDetectingHits = function(moleEl) {
-   var counter = 0;
-   function handleHit(e) {
-      var moleContEl = e.target.parentElement;
-      if (moleContEl.classList.toString().indexOf('hit') !== -1) return; //exit if the mole was just hit
-     console.log('score', ++counter);
-     moleContEl.classList.add('hit');
-      window.setTimeout(function() {
-        moleContEl.classList.remove('hit');
-      }, 850); //only moles without a class added to them surface.
-    }
-    moleEl.addEventListener('click', handleHit, false);
-  };
 
-  var popUpAMole = function() {
-    //take the moles that are not currently being animated
-  };
-
-  function init(speed) {
-    var moles = [moleC1, moleC2, moleC3];
-    moles.forEach(function(mole) {
-      startDetectingHits(mole);
-    });
-
-  }
 </script>
 </body>
 </html>
-<script>
-  /*Control all the timing functions
-    how fast is animation for popup? (set in CSS) set directly on DOM element using JS m.style.webkitTranslation
-    how fast is pause at top?  when does it start descending? (controlled by removal of exposed on setTimeOut)
-    when is laugh triggered? (time this so the animation finishes just as mole escapes or descend.duration - laugh.duration
-    how fast does it descend (set different durations for exposed vs hidden translations by converting these into animations)
-*/
-
-</script>
-
-    <!--//The way it will work is I create a transition animation for popping the head out of its hole.-->
-    <!--//A function will randomly attach a class to one of the moles which will trigger this animation.-->
-    <!--//It will also attach a timer (or animation) that will kick off the rest of the sequence..laughing and descending-->
-<!--if not clicked in time.-->
-    <!--//  It will also have to attach a click listener to check whether the mole is clicked or not.  I could bind and-->
-<!--unbind these listeners for every animation, or just leave them attached ..but I'd have to handle issues like "can't-->
-<!--get clicked more than once during a pop up etc.-->
-<!--
-
-function() {
-  molec1.classList.add('poppingUp');
-  setTimeout(function() {
-    molec1.classList.remove('poppingUp');
-    molec1.classList.add('escaping');
-}, 2000);
-}-->
