--- a/mole/mole.html
+++ b/mole/mole.html
@@ -15,27 +15,25 @@
 <body>
 <div class="board">
   <div class="background">
-    <img class="grassUpper" src="data/img/foreground/grass_upper128.png" alt="Grass"/>
-    <img class="grassLower" src="data/img/foreground/grass_lower128.png" alt="Grass"/>
+    <img class="grassUpper" draggable="false" src="data/img/foreground/grass_upper128.png" alt="Grass"/>
+    <img class="grassLower" draggable="false" src="data/img/foreground/grass_lower128.png" alt="Grass"/>
+    <img class="dirt" draggable="false" src="data/img/background/bg_dirt128.png" alt="Dirt"/>
   </div>
 
   <div id="moleC1" class="moleContainer">
-    <img id="mole1" class="mole" src="data/img/sprites/mole.png" alt="mole"/>
+    <img id="mole1" class="mole" draggable="false" src="data/img/sprites/mole.png" alt="mole"/>
   </div>
   <div id="moleC2" class="moleContainer">
-    <img id="mole2" class="mole" src="data/img/sprites/mole.png" alt="mole"/>
+    <img id="mole2" class="mole" draggable="false" src="data/img/sprites/mole.png" alt="mole"/>
   </div>
   <div id="moleC3" class="moleContainer">
-    <img id="mole3" class="mole" src="data/img/sprites/mole.png" alt="mole"/>
-  </div>
-
-  <div class="scoreboard">
-    <div class="timer"></div>
-    <div class="score"></div>
+    <img id="mole3" class="mole" draggable="false" src="data/img/sprites/mole.png" alt="mole"/>
   </div>
 </div>
 
-<script src="script.js"></script>
+<audio src="data\bgm\whack.mp3"></audio>
+
+<script src="mole.js"></script>
 </body>
 </html>
 </body>
