Add sound effect when mole is hit

--- a/mole/mole.html
+++ b/mole/mole.html
@@ -31,7 +31,9 @@
   </div>
 </div>
 
-<audio src="data\bgm\whack.mp3"></audio>
+<audio id="bgmusic" src="data/bgm/whack.mp3" type="audio/mp3"></audio>
+<audio id="sfxhit" src="data/sfx/ow.mp3" type="audio/mp3"></audio>
+<audio id="sfxlaugh" src="data/sfx/laugh.mp3" type="audio/mp3"></audio>
 
 <script src="mole.js"></script>
 </body>
