--- a/mole/mole.html
+++ b/mole/mole.html
@@ -31,6 +31,17 @@
   </div>
 </div>
 
+<div id="scoreboard">
+  <div class="scoreContainer">
+    <div>time: </div>
+    <div class="timer">--</div>
+    <div>score:</div>
+    <div class="score">00</div>
+    <div class="outOf">/</div>
+    <div class="scorePossible">00</div>
+  </div>
+</div>
+
 <audio id="bgmusic" src="data/bgm/whack.mp3" type="audio/mp3"></audio>
 <audio id="sfxhit" src="data/sfx/ow.mp3" type="audio/mp3"></audio>
 <audio id="sfxlaugh" src="data/sfx/laugh.mp3" type="audio/mp3"></audio>
